# julia_rust_embedded

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  bare_metal.asm  rust-toolchain.toml
.cargo/: config.toml
assets/Menu_Original_TTC_3100/: especificacao_menu.rs
assets/Menu_Original_TTC_3100/codigo-fonte-posijet/: MENUPO11.INC
avr_main/: Cargo.toml
avr_main/.cargo/: config.toml
avr_main/src/: app.rs  board.rs  datalink.rs  main.rs  menu.rs  microcontroler.rs  printable.rs  transact.rs
avr_main/src/board/: debug.rs  front_panel.rs  input_expander.rs  keyboard.rs  lcd.rs  lcd_2.rs  mod.rs  output_expander.rs  peripherals.rs  shiftin.rs  shiftout.rs
avr_main/src/board/lcd/: adapter.rs  interface.rs
avr_main/src/cmpp/: main.rs  mod.rs
avr_main/src/cmpp/datalink/: concrete_serial.rs  mod.rs  transact.rs  transact_test.rs
avr_main/src/cmpp/transport/: device.rs  low_level.rs  mod.rs
avr_main/src/custom_alloc/: alloc_error_handler.rs  custom_allocator.rs  mod.rs
avr_main/src/datalink/: mod.rs  transact.rs
avr_main/src/enviroment/: front_panel.rs  mod.rs
avr_main/src/menu/: accessor.rs  canvas.rs  classic_ttc_strings.rs  database.rs  flash.rs  keyboard.rs  main.rs  menu_entry_point.rs  menu_lcd.rs  menu_manager.rs  mod.rs  model.rs  point.rs  ratangular_wave.rs  sub_menu_handle.rs  widget.rs
avr_main/src/menu/widget/: caption.rs  cursor.rs  edit_mode.rs  execucao.rs  field.rs  main_menu.rs  manual_mode.rs  menu_item.rs  mod.rs  optional.rs  rectangle.rs  splash.rs  sub_menu.rs  sub_menu_render.rs  submenu.rs  submenu_item.rs  unsigned16_widget.rs  widget.rs  widget_tests.rs
avr_main/src/menu/widget/caption/: caption.rs  mod.rs
avr_main/src/menu/widget/field/: builder.rs  field.rs  mod.rs  numerical.rs  optional.rs  unsigned16_widget.rs
avr_main/src/menu/widget/menu_item/: builder.rs  menu_item.rs  string_template_constructor.rs
avr_main/src/menu/widget/submenu/: flash_text.rs  flash_texts.rs  menu_programa_controler.rs  mod.rs  navigation_state.rs  render.rs  spec.rs  spec_options.rs  sub_menu_handle.rs  sub_menu_render.rs
avr_main/src/menu/widget/submenu_programa/: hepers.rs  menu_programa_controler.rs  navigation_state.rs
avr_main/src/microcontroler/: delay.rs  eeprom.rs  mod.rs  ratangular_wave.rs  register.rs  serial.rs  timer.rs
avr_main/src/panic/: mod.rs  panic_handler.rs
avr_main/src/protocol/: datalink_comm.rs  datalink_out.rs
avr_main/src/string/: flash.rs
avr_main/src/utils/: generic_string.rs  mod.rs
bare_metal/: Cargo.toml
bare_metal/src/: app.rs  fatal_error.rs  main.rs  menu.rs
bare_metal/src/board/: front_panel.rs  input_expander.rs  keyboard.rs  keypad.rs  lcd.rs  output_expander.rs  peripherals.rs  shiftin.rs  shiftout.rs
bare_metal/src/board/lcd/: adapter.rs  driver.rs  interface.rs
bare_metal/src/geometry/: point.rs  rectangle.rs
bare_metal/src/menu/: canvas.rs  model.rs  screen_buffer.rs
bare_metal/src/menu/widget/: caption.rs  execucao.rs  field.rs  main_menu.rs  manual_mode.rs  menu_item.rs  splash.rs  submenu_programa.rs  widget.rs
bare_metal/src/menu/widget/field/: builder.rs  edit_mode.rs  field.rs  numerical.rs  optional.rs
bare_metal/src/menu/widget/menu_item/: builder.rs  menu_item.rs  string_template_constructor.rs
bare_metal/src/menu/widget/submenu_programa/: core.rs  flash_texts.rs  menu_programa_controler.rs  navigation_state.rs  spec.rs  spec_options.rs
bare_metal/src/microcontroler/: delay.rs  eeprom.rs  ratangular_wave.rs  serial.rs
bare_metal/src/panic/: panic_handler.rs
bench/: .gitignore  Cargo.toml  readme.md
cross_platform/: Cargo.toml  README.md
cross_platform/src/protocol/datalink/: checksum.rs  datalink.rs  decoder.rs  decoder2.rs  frame.rs
cross_platform/src/protocol/transport/: device.rs  transport_error.rs  transport_layer.rs
cross_platform/src/serial_mock/: ring_buffer.rs  serial_connection_mock.rs
cross_platform/src/types/: delay.rs
cross_platform/src/utils/: cursor.rs  numerical.rs
lib_1/: Cargo.toml
lib_1/src/: lib.rs  serial_mock.rs  utils.rs
lib_1/src/adt/: mod.rs  profunctor.rs  reader.rs
lib_1/src/arena/: arena.rs
lib_1/src/mock/: array.rs  mod.rs  ring_buffer.rs  serial_connection_mock.rs
lib_1/src/protocol/: checksum.rs  common.rs  datalink_base.rs  datalink_in.rs  datalink_out.rs  decoder.rs  encoder.rs  frame.rs  input_parser.rs  mod.rs  transact.rs
lib_1/src/protocol/datalink/: checksum.rs  datalink.rs  decoder.rs  decoder2.rs  encoder.rs  frame.rs  mod.rs  prelude.rs  transact.rs
lib_1/src/protocol/transport/: channel.rs  device.rs  master_frame.rs  master_packet.rs  mod.rs  profunctor.rs  reader.rs  transact_packet.rs  transport_error.rs  transport_layer.rs  word_16.rs
lib_1/src/protocol_2/: common.rs
lib_1/src/serial_mock/: array.rs
lib_1/src/types/: delay.rs  mod.rs  serial_connection.rs
lib_1/src/utils/: bit_wise.rs  common.rs  cursor.rs  mod.rs
scripts/: Cargo.toml  bench_database.csv
scripts/src/: main.rs
src/: board.rs  common.rs  core.rs  eeprom.rs  main.rs  register.rs
src/board/: debug.rs  input_expander.rs  io.rs  keyboard.rs  lcd.rs  lcd_2.rs  mod.rs  output_expander.rs  shiftin.rs  shiftout.rs
src/microcontroler/: delay.rs  eeprom.rs  mod.rs  serial.rs  timer.rs
src/protocol/: data_link_in.rs  datalink_base.rs  datalink_comm.rs  datalink_in.rs  datalink_out.rs  mod.rs  parser1.rs
