[workspace]

members = [
    "bare_metal",
    "cross_platform",
]

exclude = [
    "scripts"
]

# Not sure about why this parameter is necessary
resolver = "2"

# Note(fv): Below lines seems to be unecessary. Check if it is possible to remove it in future

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = "fat"
opt-level = "z"


