[package]
name = "avr_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lib_1= { path = "../lib_1" }
#avr-std-stub = "1.0.3"
#ruduino = {  git = "https://github.com/avr-rust/ruduino", rev = "c057499", default-features = false }
#panic-halt = "0.2.0"
embedded-hal = "0.2.3"
avr-device = "0.3.4"
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "1aacefb335517f85d0de858231e11055d9768cdf", features = ["arduino-uno"] }
heapless = { git = "https://github.com/japaric/heapless", rev = "5229dea4e77ef68f034262dc7f6baf02be61b6ab"}
avr-progmem = "0.3.1"
paste = "1.0"

# Todo: remove the dependency of ruduino, because it overlaps functionalities with arduino-hal (maybe choose one or another)
[dependencies.ruduino]
git = "https://github.com/avr-rust/ruduino"
rev = "c057499"
# disable the dependency of avr-std-stub inside ruduino which implements a default panic_handler. 
#We want to abort the use of this handler, because we want our own panic_handler.
default-features = false