[package]
name = "bare_metal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cross_platform = { path = "../cross_platform" }
# ruduino "default-features = false" meaning => to disable the dependency of avr-std-stub inside ruduino which implements a default panic_handler. 
#We want to abort the use of this handler, because we want our own panic_handler.
ruduino = {  git = "https://github.com/avr-rust/ruduino", rev = "c057499", default-features = false }
#panic-halt = "0.2.0"
embedded-hal = "0.2.3"
avr-device = { version = "0.3.4", features = ["atmega328p"]}
# Currently the 'Timer" interruption is using arduino-hal crate
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "1aacefb335517f85d0de858231e11055d9768cdf", features = ["arduino-uno"] }
heapless = { workspace = true }
avr-progmem = { path = "../avr-progmem-rs" }
paste = "1.0"
enum_dispatch = "0.3.11"
