[package]
name = "bare_metal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cross_platform = { path = "../cross_platform" }
# ruduino "default-features = false" meaning => to disable the dependency of avr-std-stub inside ruduino which implements a default panic_handler. 
#We want to abort the use of this handler, because we want our own panic_handler.
# TODO: When possible remove ruduino dependency (use avr-hal instead). Following drivers may be using ruduino at moment: lcd, shift-registers, eeprom 
ruduino = {  git = "https://github.com/avr-rust/ruduino", rev = "c057499", default-features = false }
#panic-halt = "0.2.0"
embedded-hal = "0.2.7"
avr-device = { version = "0.5.1", features = ["atmega328p"]}
# Currently the 'Timer" interruption is using arduino-hal crate
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "7b3212216899d51a9ab3b63852264147ae642e84", features = ["arduino-uno"] }
heapless = "0.7.16"
avr-progmem = "0.3.3"
paste = "1.0"
enum_dispatch = "0.3.11"
