[package]
name = "lib_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "1.0.4"
heapless = { git = "https://github.com/japaric/heapless", rev = "5229dea4e77ef68f034262dc7f6baf02be61b6ab"}
enum_dispatch = "0.3.11"
